update laude column naming

--- a/admin/data/appraisalPoints.json
+++ b/admin/data/appraisalPoints.json
@@ -32,8 +32,8 @@
     "Membership_Learned_Society": 2,
     "Membership_Professional_Organization": 1,
     "Membership_Civic_Social_Economic_Organization": 1,
-    "Honors_Summa_Cum_Laude": 3,
-    "Honors_Cum_Laude": 2,
+    "Honors_Summa_Laude": 3,
+    "Honors_Laude": 2,
     "Honors_Honorable_Mention": 1,
     "Civic_Service_First_level": 3,
     "Civic_Service_Second_level": 2,
